--- a/SimpleWeather/WeatherNow.xaml
+++ b/SimpleWeather/WeatherNow.xaml
@@ -6,6 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.DataContext>
+        <local:WeatherNowView />
+    </Page.DataContext>
     <Page.Resources>
         <Style x:Key="WeatherIcon" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
@@ -133,7 +136,7 @@
         </Style>
     </Page.Resources>
 
-    <Grid>
+    <Grid Background="#FF006FBF">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -147,10 +150,7 @@
             <AppBarButton Icon="Refresh" Label="Refresh" Click="RefreshButton_Click"/>
         </CommandBar>
 
-        <ScrollViewer x:Name="MainViewer" VerticalScrollMode="Auto" Grid.Row="1">
-            <ScrollViewer.Background>
-                <ImageBrush ImageSource="Assets/Backgrounds/DaySky.jpg" Stretch="UniformToFill" AlignmentX="Right"/>
-            </ScrollViewer.Background>
+        <ScrollViewer x:Name="MainViewer" VerticalScrollMode="Auto" Grid.Row="1" Background="{Binding Background}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -163,9 +163,9 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Name="Location" Text="Location" Foreground="White" FontSize="36" FontWeight="SemiBold"
+                    <TextBlock Name="Location" Text="{Binding Location}" Foreground="White" FontSize="36" FontWeight="SemiBold"
                                             HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,15,0,0" Grid.Row="0" />
-                    <TextBlock Name="UpdateDate" Text="Updated on Day Time" FontSize="12" Foreground="White"
+                    <TextBlock Name="UpdateDate" Text="{Binding UpdateDate}" FontSize="12" Foreground="White"
                                             HorizontalAlignment="Center" VerticalAlignment="Bottom" Padding="5" Grid.Row="1"/>
                 </Grid>
                 <Grid Grid.Row="1">
@@ -175,10 +175,10 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Viewbox x:Name="WeatherBox" VerticalAlignment="Top" Height="150" Width="150" Grid.Row="0">
-                        <TextBlock x:Name="WeatherIcon" Style="{StaticResource WeatherIcon}" Text="&#xf00d;" />
+                        <TextBlock x:Name="WeatherIcon" Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon}" />
                     </Viewbox>
-                    <TextBlock Name="CurCondition" Text="Condition" FontSize="18" HorizontalAlignment="Center" Foreground="White" Grid.Row="1"/>
-                    <TextBlock Name="CurTemp" Text="Temp" FontSize="24" Foreground="White" Style="{StaticResource WeatherIcon}" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="2"/>
+                    <TextBlock Name="CurCondition" Text="{Binding CurCondition}" FontSize="18" HorizontalAlignment="Center" Foreground="White" Grid.Row="1"/>
+                    <TextBlock Name="CurTemp" Text="{Binding CurTemp}" FontSize="24" Foreground="White" Style="{StaticResource WeatherIcon}" HorizontalAlignment="Center" Margin="5,0,0,0" Grid.Row="2"/>
                 </Grid>
 
                 <Grid Name="DetailsPanel" Background="#10808080" Grid.Row="2">
@@ -200,7 +200,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Humidity:" Style="{StaticResource WeatherDetails}" Grid.Column="0" />
-                                <TextBlock Name="Humidity" Text="100%" Style="{StaticResource WeatherDetails}" Grid.Column="1" />
+                                <TextBlock Name="Humidity" Text="{Binding Humidity}" Style="{StaticResource WeatherDetails}" Grid.Column="1" />
                             </Grid>
                             <Grid Grid.Column="1" Padding="5,0,5,0">
                                 <Grid.ColumnDefinitions>
@@ -211,8 +211,8 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Pressure:" Style="{StaticResource WeatherDetails}" Grid.Column="0" />
                                 <TextBlock Name="Rising" FontSize="14" Foreground="White" Style="{StaticResource WeatherIcon}" Visibility="Collapsed" Padding="5" Grid.Column="1" />
-                                <TextBlock Name="Pressure" Text="10.00" Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="5,5,0,5" />
-                                <TextBlock Name="PressureUnit" Text="in" Style="{StaticResource WeatherDetails}" Grid.Column="3" Padding="3,5,0,0" />
+                                <TextBlock Name="Pressure" Text="{Binding Pressure}" Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="5,5,0,5" />
+                                <TextBlock Name="PressureUnit" Text="{Binding PressureUnit}" Style="{StaticResource WeatherDetails}" Grid.Column="3" Padding="3,5,0,0" />
                             </Grid>
                             <Grid Grid.Column="2" Padding="5,0,5,0">
                                 <Grid.ColumnDefinitions>
@@ -221,8 +221,8 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Visibility:" Style="{StaticResource WeatherDetails}" Grid.Column="0" />
-                                <TextBlock Name="Visibility" Text="14" Style="{StaticResource WeatherDetails}" Grid.Column="1" Padding="5,5,0,5" />
-                                <TextBlock Name="VisibilityUnit" Text="mi." Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="3,5,0,0" />
+                                <TextBlock Name="Visibility" Text="{Binding Visibility}" Style="{StaticResource WeatherDetails}" Grid.Column="1" Padding="5,5,0,5" />
+                                <TextBlock Name="VisibilityUnit" Text="{Binding VisibilityUnit}" Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="3,5,0,0" />
                             </Grid>
                         </Grid>
                     </Viewbox>
@@ -238,7 +238,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Feels Like:" Style="{StaticResource WeatherDetails}" Grid.Column="0" />
-                                <TextBlock Name="Chill" Text="Chill" Style="{StaticResource WeatherDetails}" Grid.Column="1" />
+                                <TextBlock Name="Chill" Text="{Binding Chill}" Style="{StaticResource WeatherDetails}" Grid.Column="1" />
                             </Grid>
                             <Grid Grid.Column="1" Padding="5,0,5,0">
                                 <Grid.ColumnDefinitions>
@@ -249,8 +249,8 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Text="Wind:" Style="{StaticResource WeatherDetails}" Grid.Column="0" />
                                 <TextBlock Name="WindDirection" FontSize="14" Foreground="White" Style="{StaticResource WeatherIcon}" Text="&#xf058;" Padding="5" Grid.Column="1" />
-                                <TextBlock Name="Speed" Text="14" Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="5,5,0,5" />
-                                <TextBlock Name="SpeedUnit" Text="mph" Style="{StaticResource WeatherDetails}" Grid.Column="3" Padding="3,5,0,0" />
+                                <TextBlock Name="Speed" Text="{Binding Speed}" Style="{StaticResource WeatherDetails}" Grid.Column="2" Padding="5,5,0,5" />
+                                <TextBlock Name="SpeedUnit" Text="{Binding SpeedUnit}" Style="{StaticResource WeatherDetails}" Grid.Column="3" Padding="3,5,0,0" />
                             </Grid>
                         </Grid>
                     </Viewbox>
@@ -266,7 +266,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock FontSize="18" Foreground="White" Style="{StaticResource WeatherIcon}" Text="&#xf051;" Padding="5" Grid.Column="0" />
-                                <TextBlock Name="Sunrise" Text="7:00 AM" Style="{StaticResource WeatherDetails}" FontSize="16" Grid.Column="1" />
+                                <TextBlock Name="Sunrise" Text="{Binding Sunrise}" Style="{StaticResource WeatherDetails}" FontSize="16" Grid.Column="1" />
                             </Grid>
                             <Grid Grid.Column="1" Padding="5,0,10,0">
                                 <Grid.ColumnDefinitions>
@@ -274,7 +274,7 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock FontSize="18" Foreground="White" Style="{StaticResource WeatherIcon}" Text="&#xf052;" Padding="5" Grid.Column="0" />
-                                <TextBlock Name="Sunset" Text="7:00 PM" Style="{StaticResource WeatherDetails}" FontSize="16" Grid.Column="1"/>
+                                <TextBlock Name="Sunset" Text="{Binding Sunset}" Style="{StaticResource WeatherDetails}" FontSize="16" Grid.Column="1"/>
                             </Grid>
                         </Grid>
                     </Viewbox>
@@ -287,7 +287,18 @@
                     <Button x:Name="RightButton" Content="&#xE00F;" HorizontalAlignment="Right" Click="RightButton_Click" IsEnabled="True" Style="{StaticResource ArrowButton}" />
                     <ScrollViewer Name="ForecastViewer" Margin="50,0,50,0" HorizontalAlignment="Center" HorizontalScrollMode="Enabled" HorizontalScrollBarVisibility="Hidden"
                                                 VerticalScrollMode="Disabled" VerticalScrollBarVisibility="Hidden" ViewChanged="ForecastViewer_ViewChanged">
-                        <StackPanel Name="ForecastPanel" Height="200" Orientation="Horizontal" />
+                        <ItemsControl x:Name="StackControl">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <local:ForecastItem />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel x:Name="ForecastPanel" Height="200" Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
                     </ScrollViewer>
                 </Grid>
             </Grid>
