--- a/SimpleWeather/MainPage.xaml
+++ b/SimpleWeather/MainPage.xaml
@@ -13,9 +13,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Height="150" Grid.Row="0">
-            <Image x:Name="AppLogo" VerticalAlignment="Center" Margin="0,0,0,0" Source="Assets/Square150x150Logo.png" />
-        </Grid>
+        <Viewbox MaxHeight="150" Grid.Row="0">
+            <Image x:Name="AppLogo" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0" Source="Assets/Square150x150Logo.png" />
+        </Viewbox>
         <Grid Height="80" Grid.Row="1" Padding="25,0" RequestedTheme="Dark" Name="SearchGrid">
             <TextBox x:Name="Location" FontSize="24" PlaceholderText="Enter Location..." Margin="0,0,50,0" RequestedTheme="Light" VerticalAlignment="Center" KeyUp="Location_KeyUp"/>
             <Button Name="GPS" Height="44" Margin="0,0,6,0" Width="44" Click="GPS_Click" HorizontalAlignment="Right" ToolTipService.ToolTip="Find Location via GPS" VerticalAlignment="Center">
