--- a/SimpleWeather/Controls/ForecastItem.xaml
+++ b/SimpleWeather/Controls/ForecastItem.xaml
@@ -6,8 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignHeight="200"
+    d:DesignWidth="155">
     <UserControl.Resources>
         <Style x:Key="WeatherIcon" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
@@ -17,56 +17,53 @@
             <Setter Property="TextAlignment" Value="Center" />
         </Style>
         <Style x:Key="ForecastBorder" TargetType="Border">
-            <Setter Property="Width" Value="175" />
+            <Setter Property="Width" Value="155" />
             <Setter Property="Height" Value="200" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="White" />
         </Style>
         <Style x:Key="ForecastIcon" TargetType="Viewbox">
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="Height" Value="75" />
             <Setter Property="Width" Value="75" />
-            <Setter Property="Margin" Value="20,45,0,0" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="Margin" Value="10,0,0,0" />
         </Style>
         <Style x:Key="ForecastDate" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Text" Value="Date" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Top" />
-            <Setter Property="Margin" Value="0,0,0,0" />
-            <Setter Property="Padding" Value="20,10,0,0" />
+            <Setter Property="Padding" Value="10" />
         </Style>
         <Style x:Key="ForecastTemp" TargetType="RichTextBlock">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="20" />
             <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Margin" Value="0,150,0,0" />
-            <Setter Property="Padding" Value="20,0,0,10" />
+            <Setter Property="Padding" Value="10" />
         </Style>
         <Style x:Key="ForecastCondition" TargetType="TextBlock">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="14" />
             <Setter Property="Text" Value="Condition" />
-            <Setter Property="TextAlignment" Value="Center" />
+            <Setter Property="TextAlignment" Value="Left" />
             <Setter Property="TextWrapping" Value="Wrap" />
-            <Setter Property="HorizontalAlignment" Value="Left" />
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Margin" Value="0,75,0,0" />
-            <Setter Property="Padding" Value="20,0,0,0" />
+            <Setter Property="Padding" Value="10,5" />
         </Style>
     </UserControl.Resources>
     
     <Border Style="{StaticResource ForecastBorder}">
         <Grid>
-            <Viewbox Style="{StaticResource ForecastIcon}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Viewbox Style="{StaticResource ForecastIcon}" Grid.Row="1">
                 <TextBlock Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon}" />
             </Viewbox>
-            <TextBlock Style="{StaticResource ForecastDate}" Text="{Binding Date}" />
-            <TextBlock Style="{StaticResource ForecastCondition}" Text="{Binding Condition}" />
-            <RichTextBlock Style="{StaticResource ForecastTemp}">
+            <TextBlock Style="{StaticResource ForecastDate}" Text="{Binding Date}" Grid.Row="0"/>
+            <TextBlock Style="{StaticResource ForecastCondition}" Text="{Binding Condition}" Grid.Row="2"/>
+            <RichTextBlock Style="{StaticResource ForecastTemp}" Grid.Row="3">
                 <Paragraph>
                     <Run FontWeight="SemiBold" Text="{Binding HiTemp}" />
                     <Run FontSize="16" FontWeight="SemiBold" Text="{Binding LoTemp}" Foreground="LightGray"/>
