SimpleWeather: switch to WeatherUnderground API
* Use WeatherUnderground API for weather data
* Switch Textbox to AutoSuggestBox for location queries
* Separate WUnderground & Yahoo Weather code
* Cleanup common functions and methods

--- a/SimpleWeather/WeatherNow.xaml
+++ b/SimpleWeather/WeatherNow.xaml
@@ -2,6 +2,7 @@
     x:Class="SimpleWeather.WeatherNow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:SimpleWeather.Controls"
     xmlns:local="using:SimpleWeather"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -308,7 +309,7 @@
                         <ItemsControl x:Name="StackControl">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <local:ForecastItem />
+                                    <controls:ForecastItem />
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                             <ItemsControl.ItemsPanel>
